--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
         <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
         <style>
             body {
-                background-color: indianred;
+                background-color: slategrey;
                 color: white; //font-color
             }
 
@@ -18,7 +18,7 @@
     <body>
             <div class="container">
                 <form class="form-signin" method="post" action="/login">
-                    <h2 class="form-signin-heading">Please log in to eHOSPITAL</h2>
+                    <h2 class="form-signin-heading">Please log into eHOSPITAL</h2>
                     <p>
                         <label for="username" class="sr-only">Username</label>
                         <input type="text" id="username" name="username" class="form-control" placeholder="Username" required="" autofocus="">
@@ -26,6 +26,10 @@
                     <p>
                         <label for="password" class="sr-only">Password</label>
                         <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="">
+                    </p>
+                    <p>
+                        Remember me?
+                        <label for="remember-me"></label><input type="checkbox" id="remember-me" name="remember-me" class="form-control">
                     </p>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
                 </form>
